--- a/src/app/ui/blocks/home-books/home-books.component.css
+++ b/src/app/ui/blocks/home-books/home-books.component.css
@@ -9,5 +9,5 @@
 
 .cards-container__card {
   display: flex;
-  flex: 1;
+  flex: 2;
 }
